Fix bottom scrolling for event show page on mobile

--- a/frontend/src/components/EventPages/eventform.css
+++ b/frontend/src/components/EventPages/eventform.css
@@ -112,7 +112,8 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    margin-bottom: 100px;
+    box-sizing: border-box;
+    padding-bottom: 100px;
 }
 
 .event-show-left {
